chapter13/test/initial-setup/hello-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ism-app
spec:
  hosts:
  - "ism-app.cloud"
  gateways:
  - ism-app-gateway
  http:
  - route:
    - destination:
        host: ism-app
        port:
          number: 8080
    # configure a 2s timeout
